--- a/src/Server/ScreenOverwriterServer/ScreenOverwriterServer/ScreenOverwriterServer.csproj
+++ b/src/Server/ScreenOverwriterServer/ScreenOverwriterServer/ScreenOverwriterServer.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.78" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.4" />
     <PackageReference Include="MySqlConnector" Version="1.3.2" />
     <PackageReference Include="RxWebSocket" Version="2.1.6" />
   </ItemGroup>
