--- a/src/RaynServer/Rayn/Rayn/Rayn.csproj
+++ b/src/RaynServer/Rayn/Rayn/Rayn.csproj
@@ -11,5 +11,9 @@
     <PackageReference Include="MySqlConnector" Version="1.3.2" />
     <PackageReference Include="RxWebSocket" Version="2.1.6" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\img\Usage\" />
+  </ItemGroup>
     
 </Project>
