--- a/src/RaynServer/Rayn/Rayn/Rayn.csproj
+++ b/src/RaynServer/Rayn/Rayn/Rayn.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <UserSecretsId>12c80b1f-768b-4277-9d22-d841338ad3cc</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -10,10 +11,6 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
     <PackageReference Include="MySqlConnector" Version="1.3.2" />
     <PackageReference Include="RxWebSocket" Version="2.1.6" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="wwwroot\img\Usage\" />
   </ItemGroup>
     
 </Project>
