--- a/src/RaynServer/Rayn/Rayn/Rayn.csproj
+++ b/src/RaynServer/Rayn/Rayn/Rayn.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Dapper" Version="2.0.78" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.4" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
+    <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.1.113" />
     <PackageReference Include="MySqlConnector" Version="1.3.2" />
     <PackageReference Include="RxWebSocket" Version="2.1.6" />
   </ItemGroup>
