--- a/src/RaynClient/.gitignore
+++ b/src/RaynClient/.gitignore
@@ -74,3 +74,4 @@ crashlytics-build.properties
 /[Aa]ssets/RxWebSocket/
 /[Aa]ssets/Kirurobo/
 /[Aa]ssets/Scripts/Utf8Json/
+/[Aa]ssets/Modern UI Pack/
