--- a/src/RaynClient/.gitignore
+++ b/src/RaynClient/.gitignore
@@ -75,3 +75,4 @@ crashlytics-build.properties
 /[Aa]ssets/Kirurobo/
 /[Aa]ssets/Scripts/Utf8Json/
 /[Aa]ssets/Modern UI Pack/
+/[Aa]ssets/TextMesh Pro/
