--- a/src/RaynServer/Rayn/.gitignore
+++ b/src/RaynServer/Rayn/.gitignore
@@ -4,7 +4,7 @@
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
 ServiceDependencies/
-Rayn/wwwroot/lib/vue/
+Rayn/wwwroot/lib/
 Rayn/wwwroot/bulma/
 .config/
 
