--- a/src/RaynServer/Rayn/Rayn/Rayn.csproj
+++ b/src/RaynServer/Rayn/Rayn/Rayn.csproj
@@ -3,7 +3,8 @@
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
         <UserSecretsId>12c80b1f-768b-4277-9d22-d841338ad3cc</UserSecretsId>
-        <UseAppHost>false</UseAppHost> 
+        <UseAppHost>false</UseAppHost>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
@@ -12,6 +13,7 @@
         <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
         <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.1.113" />
         <PackageReference Include="MySqlConnector" Version="1.3.2" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="5.0.9" />
     </ItemGroup>
 
 </Project>
