--- a/src/RaynServer/Rayn/Rayn.csproj
+++ b/src/RaynServer/Rayn/Rayn.csproj
@@ -5,6 +5,7 @@
         <UserSecretsId>12c80b1f-768b-4277-9d22-d841338ad3cc</UserSecretsId>
         <UseAppHost>false</UseAppHost>
         <Nullable>enable</Nullable>
+        <NoWarn>CA1816</NoWarn>
     </PropertyGroup>
 
     <ItemGroup>
